--- a/Labs/Lab2/app/src/main/res/values-night/themes.xml
+++ b/Labs/Lab2/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Lab1" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Lab2" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
-    <style name="Theme.Lab1.NoActionBar" parent="Theme.Lab1">
+
+    <style name="Theme.Lab2" parent="Base.Theme.Lab2" /> <!-- Add this line -->
+
+    <style name="Theme.Lab2.NoActionBar" parent="Theme.Lab2">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
