--- a/Labs/Lab1/app/src/main/res/layout/activity_main.xml
+++ b/Labs/Lab1/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:onClick="processPress"
         android:text="@string/button_calculate" />
 
-<!-- Horizontal spacer for style -->
+<!--  spacer for style -->
 
     <Space android:layout_width="match_parent"
         android:layout_height="20dp" />
