--- a/Labs/Lab4/app/src/main/res/layout/activity_main.xml
+++ b/Labs/Lab4/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- Toolbar that contains app name -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/header_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Space android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <View android:layout_width="fill_parent"
+        android:layout_height="3dp"
+        android:background="#800080" />
+
+    <Space android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <EditText android:id="@+id/url_input"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="@string/url_input" />
+
+    <Button android:id="@+id/process_image"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/process_image"
+        android:onClick="processImage"/>
+
+    <Space android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <View android:layout_width="fill_parent"
+        android:layout_height="3dp"
+        android:background="#800080" />
+
+    <Space android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <TextView android:id="@+id/display_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/display_text" />
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/image_area"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
