--- a/Labs/Lab4/app/src/main/res/values/themes.xml
+++ b/Labs/Lab4/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.Lab4" parent="Base.Theme.Lab4" />
+
+    <style name="Theme.Lab4.NoActionBar" parent="Theme.Lab4">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
